# core-engine

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: Engine.cpp  Engine.hpp  Node.cpp  Node.hpp
